DigitaleDelta.ODataTranslator/generated/ODataParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from grammar/OData.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class ODataParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		FILTER=1, SELECT=2, TOP=3, COUNT=4, SKIPTOKEN=5, STARTSWITH=6, ENDSWITH=7, 
		CONTAINS=8, TOLOWER=9, TOUPPER=10, LENGTH=11, INDEXOF=12, SUBSTRING=13, 
		TRIM=14, TIME=15, FLOOR=16, CEIL=17, ROUND=18, ABS=19, YEAR=20, MONTH=21, 
		DAY=22, HOUR=23, MINUTE=24, SECOND=25, NOW=26, DATE=27, DISTANCE=28, INTERSECTS=29, 
		EQ=30, GT=31, LT=32, GE=33, LE=34, EQ_OP=35, NE=36, AND=37, OR=38, NOT=39, 
		IN=40, LPAREN=41, RPAREN=42, COMMA=43, AMPERSAND=44, BOOLEAN=45, NUMBER=46, 
		STRING=47, IDENTIFIER=48, WS=49;
	public const int
		RULE_query = 0, RULE_queryOption = 1, RULE_filterOption = 2, RULE_primary = 3, 
		RULE_valueList = 4, RULE_filterExpr = 5, RULE_function = 6, RULE_comparison = 7, 
		RULE_selectOption = 8, RULE_selectItem = 9, RULE_topOption = 10, RULE_countOption = 11, 
		RULE_skipTokenOption = 12;
	public static readonly string[] ruleNames = {
		"query", "queryOption", "filterOption", "primary", "valueList", "filterExpr", 
		"function", "comparison", "selectOption", "selectItem", "topOption", "countOption", 
		"skipTokenOption"
	};

	private static readonly string[] _LiteralNames = {
		null, "'$filter'", "'$select'", "'$top'", "'$count'", "'$skiptoken'", 
		"'startswith'", "'endswith'", "'contains'", "'tolower'", "'toupper'", 
		"'length'", "'indexof'", "'substring'", "'trim'", "'time'", "'floor'", 
		"'ceil'", "'round'", "'abs'", "'year'", "'month'", "'day'", "'hour'", 
		"'minute'", "'second'", "'now'", "'date'", "'distance'", "'intersects'", 
		"'='", null, null, null, null, null, null, null, null, null, null, "'('", 
		"')'", "','", "'&'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "FILTER", "SELECT", "TOP", "COUNT", "SKIPTOKEN", "STARTSWITH", "ENDSWITH", 
		"CONTAINS", "TOLOWER", "TOUPPER", "LENGTH", "INDEXOF", "SUBSTRING", "TRIM", 
		"TIME", "FLOOR", "CEIL", "ROUND", "ABS", "YEAR", "MONTH", "DAY", "HOUR", 
		"MINUTE", "SECOND", "NOW", "DATE", "DISTANCE", "INTERSECTS", "EQ", "GT", 
		"LT", "GE", "LE", "EQ_OP", "NE", "AND", "OR", "NOT", "IN", "LPAREN", "RPAREN", 
		"COMMA", "AMPERSAND", "BOOLEAN", "NUMBER", "STRING", "IDENTIFIER", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "OData.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static ODataParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ODataParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ODataParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class QueryContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public QueryOptionContext[] queryOption() {
			return GetRuleContexts<QueryOptionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public QueryOptionContext queryOption(int i) {
			return GetRuleContext<QueryOptionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(ODataParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] AMPERSAND() { return GetTokens(ODataParser.AMPERSAND); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AMPERSAND(int i) {
			return GetToken(ODataParser.AMPERSAND, i);
		}
		public QueryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_query; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IODataListener typedListener = listener as IODataListener;
			if (typedListener != null) typedListener.EnterQuery(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IODataListener typedListener = listener as IODataListener;
			if (typedListener != null) typedListener.ExitQuery(this);
		}
	}

	[RuleVersion(0)]
	public QueryContext query() {
		QueryContext _localctx = new QueryContext(Context, State);
		EnterRule(_localctx, 0, RULE_query);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 26;
			queryOption();
			State = 31;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==AMPERSAND) {
				{
				{
				State = 27;
				Match(AMPERSAND);
				State = 28;
				queryOption();
				}
				}
				State = 33;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 34;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class QueryOptionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FilterOptionContext filterOption() {
			return GetRuleContext<FilterOptionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SelectOptionContext selectOption() {
			return GetRuleContext<SelectOptionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TopOptionContext topOption() {
			return GetRuleContext<TopOptionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CountOptionContext countOption() {
			return GetRuleContext<CountOptionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SkipTokenOptionContext skipTokenOption() {
			return GetRuleContext<SkipTokenOptionContext>(0);
		}
		public QueryOptionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_queryOption; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IODataListener typedListener = listener as IODataListener;
			if (typedListener != null) typedListener.EnterQueryOption(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IODataListener typedListener = listener as IODataListener;
			if (typedListener != null) typedListener.ExitQueryOption(this);
		}
	}

	[RuleVersion(0)]
	public QueryOptionContext queryOption() {
		QueryOptionContext _localctx = new QueryOptionContext(Context, State);
		EnterRule(_localctx, 2, RULE_queryOption);
		try {
			State = 41;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case FILTER:
				EnterOuterAlt(_localctx, 1);
				{
				State = 36;
				filterOption();
				}
				break;
			case SELECT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 37;
				selectOption();
				}
				break;
			case TOP:
				EnterOuterAlt(_localctx, 3);
				{
				State = 38;
				topOption();
				}
				break;
			case COUNT:
				EnterOuterAlt(_localctx, 4);
				{
				State = 39;
				countOption();
				}
				break;
			case SKIPTOKEN:
				EnterOuterAlt(_localctx, 5);
				{
				State = 40;
				skipTokenOption();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FilterOptionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FILTER() { return GetToken(ODataParser.FILTER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQ() { return GetToken(ODataParser.EQ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FilterExprContext filterExpr() {
			return GetRuleContext<FilterExprContext>(0);
		}
		public FilterOptionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_filterOption; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IODataListener typedListener = listener as IODataListener;
			if (typedListener != null) typedListener.EnterFilterOption(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IODataListener typedListener = listener as IODataListener;
			if (typedListener != null) typedListener.ExitFilterOption(this);
		}
	}

	[RuleVersion(0)]
	public FilterOptionContext filterOption() {
		FilterOptionContext _localctx = new FilterOptionContext(Context, State);
		EnterRule(_localctx, 4, RULE_filterOption);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 43;
			Match(FILTER);
			State = 44;
			Match(EQ);
			State = 45;
			filterExpr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PrimaryContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(ODataParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(ODataParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NUMBER() { return GetToken(ODataParser.NUMBER, 0); }
		public PrimaryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_primary; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IODataListener typedListener = listener as IODataListener;
			if (typedListener != null) typedListener.EnterPrimary(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IODataListener typedListener = listener as IODataListener;
			if (typedListener != null) typedListener.ExitPrimary(this);
		}
	}

	[RuleVersion(0)]
	public PrimaryContext primary() {
		PrimaryContext _localctx = new PrimaryContext(Context, State);
		EnterRule(_localctx, 6, RULE_primary);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 47;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 492581209243648L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ValueListContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PrimaryContext[] primary() {
			return GetRuleContexts<PrimaryContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PrimaryContext primary(int i) {
			return GetRuleContext<PrimaryContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(ODataParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(ODataParser.COMMA, i);
		}
		public ValueListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_valueList; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IODataListener typedListener = listener as IODataListener;
			if (typedListener != null) typedListener.EnterValueList(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IODataListener typedListener = listener as IODataListener;
			if (typedListener != null) typedListener.ExitValueList(this);
		}
	}

	[RuleVersion(0)]
	public ValueListContext valueList() {
		ValueListContext _localctx = new ValueListContext(Context, State);
		EnterRule(_localctx, 8, RULE_valueList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 49;
			primary();
			State = 54;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 50;
				Match(COMMA);
				State = 51;
				primary();
				}
				}
				State = 56;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FilterExprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PrimaryContext primary() {
			return GetRuleContext<PrimaryContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(ODataParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FilterExprContext[] filterExpr() {
			return GetRuleContexts<FilterExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FilterExprContext filterExpr(int i) {
			return GetRuleContext<FilterExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(ODataParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FunctionContext function() {
			return GetRuleContext<FunctionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NOT() { return GetToken(ODataParser.NOT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ComparisonContext comparison() {
			return GetRuleContext<ComparisonContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AND() { return GetToken(ODataParser.AND, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OR() { return GetToken(ODataParser.OR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IN() { return GetToken(ODataParser.IN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ValueListContext valueList() {
			return GetRuleContext<ValueListContext>(0);
		}
		public FilterExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_filterExpr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IODataListener typedListener = listener as IODataListener;
			if (typedListener != null) typedListener.EnterFilterExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IODataListener typedListener = listener as IODataListener;
			if (typedListener != null) typedListener.ExitFilterExpr(this);
		}
	}

	[RuleVersion(0)]
	public FilterExprContext filterExpr() {
		return filterExpr(0);
	}

	private FilterExprContext filterExpr(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		FilterExprContext _localctx = new FilterExprContext(Context, _parentState);
		FilterExprContext _prevctx = _localctx;
		int _startState = 10;
		EnterRecursionRule(_localctx, 10, RULE_filterExpr, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 66;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case NUMBER:
			case STRING:
			case IDENTIFIER:
				{
				State = 58;
				primary();
				}
				break;
			case LPAREN:
				{
				State = 59;
				Match(LPAREN);
				State = 60;
				filterExpr(0);
				State = 61;
				Match(RPAREN);
				}
				break;
			case STARTSWITH:
			case ENDSWITH:
			case CONTAINS:
			case TOLOWER:
			case TOUPPER:
			case LENGTH:
			case INDEXOF:
			case SUBSTRING:
			case TRIM:
			case TIME:
			case FLOOR:
			case CEIL:
			case ROUND:
			case ABS:
			case YEAR:
			case MONTH:
			case DAY:
			case HOUR:
			case MINUTE:
			case SECOND:
			case NOW:
			case DATE:
			case DISTANCE:
			case INTERSECTS:
				{
				State = 63;
				function();
				}
				break;
			case NOT:
				{
				State = 64;
				Match(NOT);
				State = 65;
				filterExpr(3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			Context.Stop = TokenStream.LT(-1);
			State = 86;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 84;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
					case 1:
						{
						_localctx = new FilterExprContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_filterExpr);
						State = 68;
						if (!(Precpred(Context, 4))) throw new FailedPredicateException(this, "Precpred(Context, 4)");
						State = 69;
						comparison();
						State = 70;
						filterExpr(5);
						}
						break;
					case 2:
						{
						_localctx = new FilterExprContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_filterExpr);
						State = 72;
						if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
						State = 73;
						Match(AND);
						State = 74;
						filterExpr(3);
						}
						break;
					case 3:
						{
						_localctx = new FilterExprContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_filterExpr);
						State = 75;
						if (!(Precpred(Context, 1))) throw new FailedPredicateException(this, "Precpred(Context, 1)");
						State = 76;
						Match(OR);
						State = 77;
						filterExpr(2);
						}
						break;
					case 4:
						{
						_localctx = new FilterExprContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_filterExpr);
						State = 78;
						if (!(Precpred(Context, 5))) throw new FailedPredicateException(this, "Precpred(Context, 5)");
						State = 79;
						Match(IN);
						State = 80;
						Match(LPAREN);
						State = 81;
						valueList();
						State = 82;
						Match(RPAREN);
						}
						break;
					}
					} 
				}
				State = 88;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class FunctionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STARTSWITH() { return GetToken(ODataParser.STARTSWITH, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(ODataParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FilterExprContext[] filterExpr() {
			return GetRuleContexts<FilterExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FilterExprContext filterExpr(int i) {
			return GetRuleContext<FilterExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(ODataParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(ODataParser.COMMA, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(ODataParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ENDSWITH() { return GetToken(ODataParser.ENDSWITH, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CONTAINS() { return GetToken(ODataParser.CONTAINS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TOLOWER() { return GetToken(ODataParser.TOLOWER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TOUPPER() { return GetToken(ODataParser.TOUPPER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LENGTH() { return GetToken(ODataParser.LENGTH, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INDEXOF() { return GetToken(ODataParser.INDEXOF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SUBSTRING() { return GetToken(ODataParser.SUBSTRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TRIM() { return GetToken(ODataParser.TRIM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode YEAR() { return GetToken(ODataParser.YEAR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MONTH() { return GetToken(ODataParser.MONTH, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DAY() { return GetToken(ODataParser.DAY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HOUR() { return GetToken(ODataParser.HOUR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MINUTE() { return GetToken(ODataParser.MINUTE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SECOND() { return GetToken(ODataParser.SECOND, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NOW() { return GetToken(ODataParser.NOW, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DATE() { return GetToken(ODataParser.DATE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TIME() { return GetToken(ODataParser.TIME, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DISTANCE() { return GetToken(ODataParser.DISTANCE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INTERSECTS() { return GetToken(ODataParser.INTERSECTS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(ODataParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FLOOR() { return GetToken(ODataParser.FLOOR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CEIL() { return GetToken(ODataParser.CEIL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ROUND() { return GetToken(ODataParser.ROUND, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ABS() { return GetToken(ODataParser.ABS, 0); }
		public FunctionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_function; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IODataListener typedListener = listener as IODataListener;
			if (typedListener != null) typedListener.EnterFunction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IODataListener typedListener = listener as IODataListener;
			if (typedListener != null) typedListener.ExitFunction(this);
		}
	}
